fix: remove token spacing dash, rename ui token from normal to regular

--- a/packages/components/src/components/telekom/app-header/app-header.css
+++ b/packages/components/src/components/telekom/app-header/app-header.css
@@ -28,7 +28,7 @@ scale-app-header {
 
   --color-nav: var(--telekom-color-text-and-icon-standard: );
   --background-nav: var(--telekom-color-background-surface);
-  --spacing-nav: 0 var(--telekom-spacing-unit-x-4);
+  --spacing-nav: 0 var(--telekom-spacing-unit-x4);
 }
 @keyframes keyframes-slideUp {
   from {
@@ -239,7 +239,7 @@ scale-app-header {
   }
   .header .header__brand {
     height: var(--header-brand-height);
-    padding: 0 var(--telekom-spacing-unit-x-6);
+    padding: 0 var(--telekom-spacing-unit-x6);
     transition: height var(--header-transition-speed) ease-in-out;
     justify-content: space-between;
   }
@@ -255,7 +255,7 @@ scale-app-header {
   }
   .header .header__nav {
     height: var(--header-nav-height);
-    padding: 0 var(--telekom-spacing-unit-x-6);
+    padding: 0 var(--telekom-spacing-unit-x6);
     position: relative;
   }
   .header .header__nav-logo {
@@ -263,12 +263,12 @@ scale-app-header {
     opacity: 0;
     transition: none;
     font-weight: var(--telekom-typography-font-weight-bold);
-    margin-right: var(--telekom-spacing-unit-x-4);
+    margin-right: var(--telekom-spacing-unit-x4);
     pointer-events: none;
   }
   .header.header--sticky .header__nav-logo {
     pointer-events: all;
-    margin-right: var(--telekom-spacing-unit-x-8);
+    margin-right: var(--telekom-spacing-unit-x8);
   }
 
   .header scale-nav-main:first-child li {
@@ -283,7 +283,7 @@ scale-app-header {
     list-style: none;
     transition: margin-left var(--header-transition-speed) ease-in-out;
     align-items: center;
-    margin-left: calc(-50px - var(--telekom-spacing-unit-x-4));
+    margin-left: calc(-50px - var(--telekom-spacing-unit-x4));
   }
   .header *[slot='menu-sector'],
   .header *[slot='menu-addon'],
@@ -352,7 +352,7 @@ scale-app-header {
     justify-content: flex-end;
   }
   .header .header__brand app-logo {
-    margin-right: var(--telekom-spacing-unit-x-4);
+    margin-right: var(--telekom-spacing-unit-x4);
   }
 }
 
