--- a/packages/components/src/components/telekom/nav-segment/nav-segment.css
+++ b/packages/components/src/components/telekom/nav-segment/nav-segment.css
@@ -12,7 +12,7 @@
 scale-nav-segment {
   --transition: all 0.2s ease-in-out;
   --color: var(--telekom-color-text-and-icon-inverted-standard);
-  --spacing-y: var(--telekom-spacing-unit-x-1);
+  --spacing-y: var(--telekom-spacing-unit-x1);
   --font-size: var(--telekom-typography-font-size-caption);
   --font-weight: var(--telekom-typography-font-weight-extra-bold);
   --line-height: var(--telekom-typography-line-spacing-extra-tight);
